--- a/packages/alfa-sequence/package.json
+++ b/packages/alfa-sequence/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "@siteimprove/alfa-seq",
+  "name": "@siteimprove/alfa-sequence",
   "author": "Siteimprove A/S",
   "homepage": "https://siteimprove.com",
   "version": "0.0.0",
