Implement `Sequence#groupBy()`

--- a/packages/alfa-sequence/tsconfig.json
+++ b/packages/alfa-sequence/tsconfig.json
@@ -21,6 +21,9 @@
       "path": "../alfa-iterable"
     },
     {
+      "path": "../alfa-map"
+    },
+    {
       "path": "../alfa-mapper"
     },
     {
