--- a/packages/alfa-sequence/package.json
+++ b/packages/alfa-sequence/package.json
@@ -26,13 +26,13 @@
     "@siteimprove/alfa-foldable": "^0.0.0",
     "@siteimprove/alfa-functor": "^0.0.0",
     "@siteimprove/alfa-iterable": "^0.0.0",
+    "@siteimprove/alfa-lazy": "^0.0.0",
     "@siteimprove/alfa-map": "^0.0.0",
     "@siteimprove/alfa-mapper": "^0.0.0",
     "@siteimprove/alfa-monad": "^0.0.0",
     "@siteimprove/alfa-option": "^0.0.0",
     "@siteimprove/alfa-predicate": "^0.0.0",
-    "@siteimprove/alfa-reducer": "^0.0.0",
-    "@siteimprove/alfa-thunk": "^0.0.0"
+    "@siteimprove/alfa-reducer": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
