--- a/packages/alfa-sequence/tsconfig.json
+++ b/packages/alfa-sequence/tsconfig.json
@@ -22,6 +22,9 @@
       "path": "../alfa-iterable"
     },
     {
+      "path": "../alfa-json"
+    },
+    {
       "path": "../alfa-lazy"
     },
     {
