--- a/packages/alfa-sequence/tsconfig.json
+++ b/packages/alfa-sequence/tsconfig.json
@@ -10,13 +10,13 @@
   ],
   "references": [
     {
+      "path": "../alfa-collection"
+    },
+    {
       "path": "../alfa-equatable"
     },
     {
-      "path": "../alfa-foldable"
-    },
-    {
-      "path": "../alfa-functor"
+      "path": "../alfa-hash"
     },
     {
       "path": "../alfa-json"
@@ -29,9 +29,6 @@
     },
     {
       "path": "../alfa-mapper"
-    },
-    {
-      "path": "../alfa-monad"
     },
     {
       "path": "../alfa-option"
