Implement `Collection#distinct()`

--- a/packages/alfa-list/tsconfig.json
+++ b/packages/alfa-list/tsconfig.json
@@ -40,6 +40,9 @@
       "path": "../alfa-reducer"
     },
     {
+      "path": "../alfa-set"
+    },
+    {
       "path": "../alfa-test"
     }
   ]
