--- a/packages/alfa-sequence/package.json
+++ b/packages/alfa-sequence/package.json
@@ -28,6 +28,7 @@
     "@siteimprove/alfa-option": "^0.5.0",
     "@siteimprove/alfa-predicate": "^0.5.0",
     "@siteimprove/alfa-reducer": "^0.5.0",
+    "@siteimprove/alfa-refinement": "^0.5.0",
     "@siteimprove/alfa-set": "^0.5.0"
   },
   "devDependencies": {
